--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
     "react-feather": "^1.0.8",
+    "react-redux": "^5.0.7",
     "react-responsive": "^4.1.0",
+    "redux": "^4.0.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
@@ -110,10 +112,14 @@
           "libraryDirectory": "lib",
           "style": true
         }
-      ]
+      ],
+      "transform-decorators-legacy"
     ]
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4"
   }
 }
