--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "octask",
+  "name": "OneClass Calendar App",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -58,6 +58,8 @@
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
     "start-js": "node scripts/start.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "node scripts/build.js",
     "build": "npm-run-all build-css build-js",
@@ -121,6 +123,8 @@
     "extends": "react-app"
   },
   "devDependencies": {
-    "babel-plugin-transform-decorators-legacy": "^1.3.4"
-  }
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "gh-pages": "^1.1.0"
+  },
+  "homepage": "https://jjunxi.github.io/Calendar-App/"
 }
