--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "OneClass Calendar App",
+  "name": "OneClass-Calendar-App",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
